--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-Coller ou écrire du code HTML dans la grande zone blanche
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Master CTM</title>
+		<meta charset="utf-8" />
+	</head>
+	<body>
+		<h1>CTM</h1>
+		<p>My first paragraph.</p>
+		<h2> <strong> hello </strong>
+		<p> exemple </p>
+
+
+</body>
+</html>
 Add index.html
