--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>CTM</h1>
 		<p>My first paragraph.</p>
-		<h2> <strong> hello </strong>
+		<h2> <strong> hello Master </strong>
 		<p> loremLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non augue laoreet ipsum ultricies molestie sit amet ut purus. Duis non eros at erat ornare volutpat. Nunc quis leo nibh. Nam gravida justo leo, sit amet vulputate dolor malesuada ac. Vestibulum at enim ut urna tincidunt luctus ac sed libero. Duis ullamcorper consectetur commodo. In tincidunt leo eu diam congue facilisis. Aliquam quis quam non nulla auctor egestas vel a augue. Praesent id massa erat. Phasellus pulvinar congue quam, at sollicitudin quam efficitur at. Sed quis magna sed elit imperdiet sodales vitae sed elit. Sed sem nunc, ultrices at lacus nec, sollicitudin tincidunt neque. Curabitur mattis ut sem nec fringilla. </p>
 
 
