--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
 	<body>
 		<h1>CTM</h1>
 		<p>My first paragraph.</p>
-		<h2> <strong> hello Master </strong>
-		<p> loremLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non augue laoreet ipsum ultricies molestie sit amet ut purus. Duis non eros at erat ornare volutpat. Nunc quis leo nibh. Nam gravida justo leo, sit amet vulputate dolor malesuada ac. Vestibulum at enim ut urna tincidunt luctus ac sed libero. Duis ullamcorper consectetur commodo. In tincidunt leo eu diam congue facilisis. Aliquam quis quam non nulla auctor egestas vel a augue. Praesent id massa erat. Phasellus pulvinar congue quam, at sollicitudin quam efficitur at. Sed quis magna sed elit imperdiet sodales vitae sed elit. Sed sem nunc, ultrices at lacus nec, sollicitudin tincidunt neque. Curabitur mattis ut sem nec fringilla. </p>
+		<h2> Hello Master </h2>
+		<p> LoremLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non augue laoreet ipsum 
+			ultricies molestie sit amet ut purus. Duis non eros at erat ornare volutpat. Nunc quis leo nibh. 
+			Nam gravida justo leo, sit amet vulputate dolor malesuada ac. 
+			Phasellus pulvinar congue quam, at sollicitudin quam efficitur at. Sed quis magna sed elit imperdiet sodales vitae sed
+			elit. Sed sem nunc, ultrices at lacus nec, sollicitudin tincidunt neque. Curabitur mattis ut sem nec fringilla. </p>
 		<p>
 	<!-- Un lien vers le fragement "Composantes" inscrit dans le document numérique wikipédia de P1, sur le texte "UFR d'histoire" -->
 		
-	Notre master est dispensé à <a href="https://fr.wikipedia.org/wiki/Université_Paris-I-Panthéon-Sorbonne#:~:text=L'université%20Paris%2DI%2D,et%20de%20la%20science%20politique.">Panthéon-Sorbonne</a>, plus spécifiquement au sein de <a href="https://fr.wikipedia.org/wiki/Université_Paris-I-Panthéon-Sorbonne#:~:text=L'université%20Paris%2DI%2D,et%20de%20la%20science%20politique.">l'UFR d'histoire </a>
+	Notre master est dispensé à 
+			<a href="https://fr.wikipedia.org/wiki/Université_Paris-I-Panthéon-Sorbonne#:~:text=L'université%20Paris%2DI%2D,et%20de%20la%20science%20politique.
+				">Panthéon-Sorbonne</a>, plus spécifiquement au sein de 
+			<a href="https://fr.wikipedia.org/wiki/Université_Paris-I-Panthéon-Sorbonne#:~:text=L'université%20Paris%2DI%2D,et%20de%20la%20science%20politique.
+				">l'UFR d'histoire </a>
 
 	</p>
 
