--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	Notre master est dispensé à 
 			<a href="https://fr.wikipedia.org/wiki/Université_Paris-I-Panthéon-Sorbonne#:~:text=L'université%20Paris%2DI%2D,et%20de%20la%20science%20politique.
 				">Panthéon-Sorbonne</a>, plus spécifiquement au sein de 
-			<a href="https://fr.wikipedia.org/wiki/Université_Paris-I-Panthéon-Sorbonne#:~:text=L'université%20Paris%2DI%2D,et%20de%20la%20science%20politique.
+			<a href="https://fr.wikipedia.org/wiki/Université_Paris-I-Panthéon-Sorbonne#Composantes:~:text=L'université%20Paris%2DI%2D,et%20de%20la%20science%20politique.
 				">l'UFR d'histoire </a>
 
 	</p>
